# gryphon

./: .gitignore  .readthedocs.yaml  readmecn.md  setup.cfg  setup.py  windows-install.md
docs/source/: style.rst
example/python/python-memcached/: example.py
gryphon/: _version.py
gryphon/dashboards/: dashboards.conf
gryphon/dashboards/util/: store_calculations.py
gryphon/data_service/: Procfile  auditor_task.py  orderbook_poll_task.py  trades_poll_task.py  twisted_producer.py  util.py  volume_poll_task.py
gryphon/data_service/auditors/: auditor.py  kraken_btc_usd_orderbook_auditor.py  orderbook_auditor.py  trades_auditor.py
gryphon/data_service/pollers/: open_exchange_rate_poller.py
gryphon/execution/: alembic.ini  app.py  console.py  live_runner.py
gryphon/lib/: __init__.py  arbitrage.py  assets.py  bitcoincharts.py  configuration.py  forex.py  money.py  session.py
gryphon/libc/: _factorize.c  _float64window.c  _int64window.c  _labelwindow.c  _uint8window.c  adjustment.c  rank.c
gryphon/tests/: runtests.py  testdevcn.md
gryphon/utils/: enum.py  run_algo.py
requirements/: gryphon+gds.txt  gryphon-base.txt  package_structure.txt
server/: app.py  conf.py  init.py  insert_fix.py  log.py  models.py  readme.md  requirements.txt  tornado_sqlalchemy_bak.py
server/tests/: __init__.py  _common.py  runtests.py  test_answer_keywords.py  test_declarative_base.py  test_evaluate.py  test_msg.py  test_order.py  test_question.py  test_region.py  test_school.py  test_teacher.py  test_teacherjob.py  test_user.py
server/utils/: strutils.py
(+196 files in other folders)
