[flake8]
max-line-length = 90

# Twisted uses camelCase functions and variables.
# W391: Blank lines at EOF can improve readability in VIM.
# W503: Breaking before binary operators keeps the operator nearer it's operand.
#     https://www.python.org/dev/peps/pep-0008/
ignore = N802,N803,W391,W503

application_import_names = gryphon
import_order_style = google

[nosetests]
verbosity=2
detailed-errors=1
with-ignore-docstrings=1
with-timer=1
timer-top-n=15
cover-package=gryphon
with-doctest=1
testmatch=(?:^|[\\b_\\.-])[Tt]est(?!ing)

[metadata]
description-file = README.rst

[easy_install]
index_url = http://pypi.douban.com/simple

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS=git
style=pep440
versionfile_source=gryphon/_version.py
versionfile_build=gryphon/_version.py
tag_prefix=
parentdir_prefix= gryphon-